fixed some overflow issues on laptop/desktop devices

--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ html {
 .container {
     position: relative;
     width: 100%;
-    height: 100vh;
+    height: 97vh;
     display: flex;
     justify-content: flex-end;
     align-items: center;
